# algebraic-server-reconciliation

./: .gitignore  package-lock.json  package.json
crates/game/: Cargo.toml
crates/poc/: Cargo.toml
crates/poc/src/: main.rs  poc.rs  poc_asr.rs  poc_baseline.rs
crates/poc/src/poc/: movement.rs  network.rs
docs/: .$concept.drawio.bkp  concept.drawio  main.typ
game/: package.json
proof-of-concept/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
proof-of-concept/src/: App.tsx
proof-of-concept/src/concept/shared/: connection.ts  game.ts
proof-of-concept/src/sandbox/: Poc.tsx  Sandbox.tsx
proof-of-concept/src/sandbox/game/: SideScroller.tsx  TopDown.tsx  game.ts
proof-of-concept/src/sandbox/networking/: Override.tsx  Rollback.tsx  networking.ts  strategy-algebraic.tsx  strategy-override.tsx  strategy-rollback.ts
